src/objects/Push_Notifications__c.object
<CustomObject>
    <fields>
        <fullName>Button_link__c</fullName>
        <label>Button link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Button_title__c</fullName>
        <label>Button title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Push Notifications</relationshipLabel>
        <relationshipName>Push_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Unread</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Push Notification</label>
    <nameField>
        <displayFormat>PN{000000}</displayFormat>
        <label>Push Notifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Push Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>